--- a/lesson_1/index.html
+++ b/lesson_1/index.html
@@ -2,60 +2,49 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Занятие 1</title>
+	<title>khuy</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="description" content="В этом занятии мы будем верстать страницу. Придерживаемся БЭМ методологии во время объявления классов">
 
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 	<link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
-	<link rel="shortcut icon" href="" type="image/x-icon">
+	<link rel="shortcut icon" href="assets/img/favicon/dick1.png" type="image/x-icon">
 </head>
 <body>
 <!-- Comments -->
 	<header class="header"> 
 		<div class="header__inner">
-			<div class="header__logo">Lesson1</div>
-			<div class="header__phone">+7 999 999-99-99</div>
+			<div class="header__logo">pezdenka</div>
+			<div class="header__phone">+1 337 228-14-88</div>
 			<nav class="header__menu">
 				<ul>
-					<li><a href="#">Line</a></li>
-					<li><a href="#">Line</a></li>
-					<li><a href="#">Line</a></li>
-					<li><a href="#">Line</a></li>
+					<li><a href="#">khuy</a></li>
+					<li><a href="#">suka</a></li>
+					<li><a href="#">pidr</a></li>
+					<li><a href="#">blya</a></li>
 				</ul>
 			</nav>
 		</div>	
 	</header>
   	<main class="main">
 	    <div class="main__inner">
-		      <div class="main__block main__b1"></div>
-		      <div class="main__block main__b2"></div>
-		      <div class="main__block main__b3"></div>
-		      <div class="main__block main__b1"></div>
-		      <div class="main__block main__b2"></div>
-		      <div class="main__block main__b3"></div>
-		      <div class="main__block main__b1"></div>
-		      <div class="main__block main__b2"></div>
-		      <div class="main__block main__b3"></div>
-		      <div class="main__block main__b1"></div>
-		      <div class="main__block main__b2"></div>
-		      <div class="main__block main__b3"></div>
-	    </div>
+		      <div class="main__block main__b1">
+		      <img src="assets/img/blog/post.png">
+		      	<a href="#" class="main__button">sobakovka</a>
+		      </div>
+		</div>
   	</main>
   	<footer class="footer">
 	    <div class="footer__inner">
 		      <div class="footer__menu">
 		            <ul>
-			              <li><a href="#">Главная</a></li>
-			              <li><a href="#">Магазин</a></li>
-			              <li><a href="#">Контакты</a></li>
-			              <li><a href="#">Политика конфиденциальности</a></li>
+			              <li><a href="#">zalupnaya</a></li>
+			              <li><a href="#">gay vape bar</a></li>
+			              <li><a href="#">asses phones</a></li>
+			              <li><a href="#">daite vodi</a></li>
 			        </ul>
 		      </div>
-	      <div class="footer__text">
-	      	lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-	      	lorem ipsum lorem ipsum lorem ipsum lorem ipsum 
-	      </div>
+	      <div class="footer__text">Я обоссался!</div>
 	      <div class="footer__copyright">Copyright 2017</div>
 	    </div>      
   	</footer>
